--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-proc/.import
-proc/export_presets.cfg
-proc/godot
+gdprogs/.import
+gdprogs/export_presets.cfg
+gdprogs/godot
 *.o
 *.PAK
 __pycache__
